Fit lightbox to page (can zoom manually if desired) Allow border to be removed from transparent images Use error color for image border when they fail to load Fix header elements overlapping lightbox

--- a/assets/res/main.css
+++ b/assets/res/main.css
@@ -1213,6 +1213,15 @@ img::before {
 	width: fit-content;
 }
 
+.container.image.transparent {
+	border: unset;
+}
+
+.container.image.error {
+	border: 1px solid var(--error);
+	color: var(--error);
+}
+
 .container.image img {
 	max-width: 100%;
 	height: auto;
@@ -1224,7 +1233,7 @@ img::before {
 	position: fixed;
 	right: 0;
 	top: 0;
-	z-index: 1;
+	z-index: 10;
 
 	background: var(--lightbox);
 	display: flex;
@@ -1247,10 +1256,10 @@ img::before {
 
 .lightbox-background.active img {
 	margin: auto;
-
-	/* TODO: Avoid the need for important */
-	max-width: none;
-	height: fit-content;
+	height: auto;
+	width: auto;
+	max-width: 100%;
+	max-height: 100%;
 }
 
 /* ---------------------------------------------------------------------------------------------- */
